Fix: Number of directories (DIRECTORY) back in the dataframe
DIRECTORY got mistaken for an identifier and removed from the dataframe. This deletion has been reverted.

--- a/Scripts/Sonar Data Cleaning/Variable_Selection_based_on_missingness.ipynb
+++ b/Scripts/Sonar Data Cleaning/Variable_Selection_based_on_missingness.ipynb
@@ -2192,7 +2192,7 @@
    "metadata": {},
    "source": [
     "## Identifier Columns\n",
-    "The remaining missing values are mostly in columns that help to identify the analysis across different tables in the database (COMMIT_HASH, ANALYSIS_KEY, DIRECTORIES). Since these aren't metrics that can be used for a model, they are removed."
+    "The remaining missing values are mostly in columns that help to identify the analysis across different tables in the database (COMMIT_HASH and ANALYSIS_KEY). Since these aren't metrics that can be used for a model, they are removed."
    ]
   },
   {
@@ -2206,73 +2206,74 @@
      "output_type": "stream",
      "text": [
       "Missing Values per Column:\n",
-      "PROJECT_ID                                     0\n",
-      "SQ_ANALYSIS_DATE                               0\n",
-      "CLASSES                                       20\n",
-      "FILES                                         18\n",
-      "FUNCTIONS                                     20\n",
-      "COMMENT_LINES                                 18\n",
-      "COMMENT_LINES_DENSITY                         18\n",
-      "COMPLEXITY                                    20\n",
-      "FILE_COMPLEXITY                               20\n",
-      "CLASS_COMPLEXITY                              20\n",
-      "FUNCTION_COMPLEXITY                           20\n",
-      "FUNCTION_COMPLEXITY_DISTRIBUTION            9875\n",
-      "FILE_COMPLEXITY_DISTRIBUTION                  20\n",
-      "COVERAGE                                      26\n",
-      "DUPLICATED_LINES                               0\n",
-      "DUPLICATED_BLOCKS                              0\n",
-      "DUPLICATED_FILES                               0\n",
-      "DUPLICATED_LINES_DENSITY                      18\n",
-      "VIOLATIONS                                     0\n",
-      "BLOCKER_VIOLATIONS                             0\n",
-      "CRITICAL_VIOLATIONS                            0\n",
-      "INFO_VIOLATIONS                                0\n",
-      "FALSE_POSITIVE_ISSUES                          0\n",
-      "CONFIRMED_ISSUES                               0\n",
-      "LAST_COMMIT_DATE                              53\n",
-      "CODE_SMELLS                                    0\n",
-      "BUGS                                           0\n",
-      "EFFORT_TO_REACH_MAINTAINABILITY_RATING_A       0\n",
-      "AFFERENT_COUPLINGS                             0\n",
-      "EFFERENT_COUPLINGS                             0\n",
-      "COGNITIVE_COMPLEXITY                          20\n",
-      "LINES                                         18\n",
-      "NCLOC                                         18\n",
-      "NCLOC_LANGUAGE_DISTRIBUTION                   18\n",
-      "LINES_TO_COVER                                26\n",
-      "LINE_COVERAGE                                 26\n",
-      "MAJOR_VIOLATIONS                               0\n",
-      "MINOR_VIOLATIONS                               0\n",
-      "OPEN_ISSUES                                    0\n",
-      "SQALE_RATING                                   0\n",
-      "NUMBER_OF_CLASSES_AND_INTERFACES               0\n",
-      "MISSING_PACKAGE_INFO                           0\n",
-      "PACKAGE                                        0\n",
-      "STATEMENTS                                    20\n",
-      "UNCOVERED_LINES                               26\n",
-      "REOPENED_ISSUES                                0\n",
-      "SQALE_INDEX                                    0\n",
-      "DEVELOPMENT_COST                               0\n",
-      "SQALE_DEBT_RATIO                               0\n",
-      "ALERT_STATUS                                   0\n",
-      "QUALITY_GATE_DETAILS                           0\n",
-      "QUALITY_PROFILES                              18\n",
-      "NEW_SQALE_DEBT_RATIO                          10\n",
-      "VULNERABILITIES                                0\n",
-      "RELIABILITY_REMEDIATION_EFFORT                 0\n",
-      "RELIABILITY_RATING                             0\n",
-      "SECURITY_REMEDIATION_EFFORT                    0\n",
-      "SECURITY_RATING                                0\n",
-      "WONT_FIX_ISSUES                                0\n",
-      "PACKAGE_DEPENDENCY_CYCLES                      0\n",
-      "database                                       0\n",
+      "PROJECT_ID                                      0\n",
+      "SQ_ANALYSIS_DATE                                0\n",
+      "CLASSES                                        20\n",
+      "FILES                                          18\n",
+      "FUNCTIONS                                      20\n",
+      "COMMENT_LINES                                  18\n",
+      "COMMENT_LINES_DENSITY                          18\n",
+      "COMPLEXITY                                     20\n",
+      "FILE_COMPLEXITY                                20\n",
+      "CLASS_COMPLEXITY                               20\n",
+      "FUNCTION_COMPLEXITY                            20\n",
+      "FUNCTION_COMPLEXITY_DISTRIBUTION             9875\n",
+      "FILE_COMPLEXITY_DISTRIBUTION                   20\n",
+      "COVERAGE                                       26\n",
+      "DUPLICATED_LINES                                0\n",
+      "DUPLICATED_BLOCKS                               0\n",
+      "DUPLICATED_FILES                                0\n",
+      "DUPLICATED_LINES_DENSITY                       18\n",
+      "VIOLATIONS                                      0\n",
+      "BLOCKER_VIOLATIONS                              0\n",
+      "CRITICAL_VIOLATIONS                             0\n",
+      "INFO_VIOLATIONS                                 0\n",
+      "FALSE_POSITIVE_ISSUES                           0\n",
+      "CONFIRMED_ISSUES                                0\n",
+      "LAST_COMMIT_DATE                               53\n",
+      "CODE_SMELLS                                     0\n",
+      "BUGS                                            0\n",
+      "EFFORT_TO_REACH_MAINTAINABILITY_RATING_A        0\n",
+      "AFFERENT_COUPLINGS                              0\n",
+      "EFFERENT_COUPLINGS                              0\n",
+      "COGNITIVE_COMPLEXITY                           20\n",
+      "LINES                                          18\n",
+      "NCLOC                                          18\n",
+      "NCLOC_LANGUAGE_DISTRIBUTION                    18\n",
+      "LINES_TO_COVER                                 26\n",
+      "LINE_COVERAGE                                  26\n",
+      "MAJOR_VIOLATIONS                                0\n",
+      "MINOR_VIOLATIONS                                0\n",
+      "OPEN_ISSUES                                     0\n",
+      "SQALE_RATING                                    0\n",
+      "NUMBER_OF_CLASSES_AND_INTERFACES                0\n",
+      "MISSING_PACKAGE_INFO                            0\n",
+      "PACKAGE                                         0\n",
+      "STATEMENTS                                     20\n",
+      "UNCOVERED_LINES                                26\n",
+      "REOPENED_ISSUES                                 0\n",
+      "SQALE_INDEX                                     0\n",
+      "DEVELOPMENT_COST                                0\n",
+      "SQALE_DEBT_RATIO                                0\n",
+      "ALERT_STATUS                                    0\n",
+      "QUALITY_GATE_DETAILS                            0\n",
+      "QUALITY_PROFILES                               18\n",
+      "NEW_SQALE_DEBT_RATIO                           10\n",
+      "VULNERABILITIES                                 0\n",
+      "RELIABILITY_REMEDIATION_EFFORT                  0\n",
+      "RELIABILITY_RATING                              0\n",
+      "SECURITY_REMEDIATION_EFFORT                     0\n",
+      "SECURITY_RATING                                 0\n",
+      "WONT_FIX_ISSUES                                 0\n",
+      "PACKAGE_DEPENDENCY_CYCLES                       0\n",
+      "database                                        0\n",
+      "DIRECTORIES                                 77687\n",
       "dtype: int64\n"
      ]
     }
    ],
    "source": [
-    "df = df.drop(['COMMIT_HASH', 'ANALYSIS_KEY', 'DIRECTORIES'], axis=1)\n",
+    "df = df.drop(['COMMIT_HASH', 'ANALYSIS_KEY'], axis=1)\n",
     "pd.set_option('display.max_rows', None)\n",
     "missing_values = df.isnull().sum()\n",
     "print(\"Missing Values per Column:\")\n",
