column check added
Added a check of the columns contained in the df before starting with the analysis

--- a/Scripts/Analysis/Correlation_Analysis.ipynb
+++ b/Scripts/Analysis/Correlation_Analysis.ipynb
@@ -1094,7 +1094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "b7b819c8-efcf-431d-99c2-cd6f93a3a3ee",
    "metadata": {},
    "outputs": [],
@@ -1107,6 +1107,44 @@
     "\n",
     "# load SonarQube measure data (without duplicates)\n",
     "df = pd.read_csv(os.path.join(data_dir, 'sonar_measures_v1_v2_no_statics.csv'), low_memory=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "0466db54-1d73-4b66-bd51-1360387aa0cc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['PROJECT_ID', 'SQ_ANALYSIS_DATE', 'CLASSES', 'FILES', 'FUNCTIONS',\n",
+       "       'COMMENT_LINES', 'COMMENT_LINES_DENSITY', 'COMPLEXITY',\n",
+       "       'FILE_COMPLEXITY', 'CLASS_COMPLEXITY', 'FUNCTION_COMPLEXITY',\n",
+       "       'FUNCTION_COMPLEXITY_DISTRIBUTION', 'FILE_COMPLEXITY_DISTRIBUTION',\n",
+       "       'DUPLICATED_LINES', 'DUPLICATED_BLOCKS', 'DUPLICATED_FILES',\n",
+       "       'DUPLICATED_LINES_DENSITY', 'VIOLATIONS', 'BLOCKER_VIOLATIONS',\n",
+       "       'CRITICAL_VIOLATIONS', 'INFO_VIOLATIONS', 'CONFIRMED_ISSUES',\n",
+       "       'LAST_COMMIT_DATE', 'CODE_SMELLS', 'BUGS',\n",
+       "       'EFFORT_TO_REACH_MAINTAINABILITY_RATING_A', 'COGNITIVE_COMPLEXITY',\n",
+       "       'LINES', 'NCLOC', 'NCLOC_LANGUAGE_DISTRIBUTION', 'LINES_TO_COVER',\n",
+       "       'MAJOR_VIOLATIONS', 'MINOR_VIOLATIONS', 'OPEN_ISSUES', 'SQALE_RATING',\n",
+       "       'MISSING_PACKAGE_INFO', 'PACKAGE', 'STATEMENTS', 'UNCOVERED_LINES',\n",
+       "       'SQALE_INDEX', 'DEVELOPMENT_COST', 'SQALE_DEBT_RATIO', 'ALERT_STATUS',\n",
+       "       'QUALITY_GATE_DETAILS', 'QUALITY_PROFILES', 'NEW_SQALE_DEBT_RATIO',\n",
+       "       'VULNERABILITIES', 'RELIABILITY_REMEDIATION_EFFORT',\n",
+       "       'RELIABILITY_RATING', 'SECURITY_REMEDIATION_EFFORT', 'SECURITY_RATING',\n",
+       "       'database', 'DIRECTORIES'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
    ]
   },
   {
