Documentation Update + Spelling Error fix in PPR
Modelling (amount of code smells) has been added to documentation

--- a/Scripts/Model/PPR_amountCodeSmells.ipynb
+++ b/Scripts/Model/PPR_amountCodeSmells.ipynb
@@ -5,8 +5,8 @@
    "id": "b2319b03-9f51-49d8-ab85-d55a80dcc47e",
    "metadata": {},
    "source": [
-    "# Project Pursuit Regression for predicting the amount of Code Smells\n",
-    "The chosen variables count 19 predictors. Having a lot of predictors can cause predictions to get worse as the dimensionality is very high and therefore the distance between observations increase (curse of dimensionality). Project Pursuit Regression breaks down this feature space into a 3D space by projecting the features into lower dimensions. This approach is tried to see whether lower dimensions benefit test performance."
+    "# Projection Pursuit Regression for predicting the amount of Code Smells\n",
+    "The chosen variables count 19 predictors. Having a lot of predictors can cause predictions to get worse as the dimensionality is very high and therefore the distance between observations increase (curse of dimensionality). ProjectionPursuit Regression breaks down this feature space into a 3D space by projecting the features into lower dimensions. This approach is tried to see whether lower dimensions benefit test performance."
    ]
   },
   {
