--- a/Scripts/Model/XGBoost_amountCodeSmells.ipynb
+++ b/Scripts/Model/XGBoost_amountCodeSmells.ipynb
@@ -487,11 +487,11 @@
      "output_type": "stream",
      "text": [
       "Fitting 5 folds for each of 192 candidates, totalling 960 fits\n",
-      "Best Parameters: {'colsample_bytree': 0.9, 'learning_rate': 0.5, 'max_depth': 7, 'n_estimators': 400, 'subsample': 0.9}\n",
+      "Best Parameters: {'colsample_bytree': 0.8, 'learning_rate': 0.5, 'max_depth': 7, 'n_estimators': 400, 'subsample': 0.8}\n",
       "XGBoost Model Evaluation (Tuned):\n",
-      "Mean Squared Error: 2048.894037570878\n",
-      "R-squared: 0.9999833360461837\n",
-      "Mean Absolute Error: 10.120672721829882\n"
+      "Mean Squared Error: 59443.22922451508\n",
+      "R-squared: 0.9995165395533762\n",
+      "Mean Absolute Error: 72.77299885213975\n"
      ]
     },
     {
@@ -506,7 +506,7 @@
     }
    ],
    "source": [
-    "xgb_model = XGBRegressor(objective='reg:squarederror', random_state=42)\n",
+    "xgb_model = XGBRegressor(objective='reg:absoluteerror', random_state=42)\n",
     "\n",
     "param_grid = {\n",
     "    'n_estimators': [100, 200, 300, 400],\n",
@@ -560,7 +560,7 @@
    "metadata": {},
    "source": [
     "## Result\n",
-    "By using XGBoost, a small MAE of 10.12 is achieved as testing performance. The MSE is very low as well. XGBoost performs by far the best out of the tried model types."
+    "By using XGBoost, a small MAE of 72.77 is achieved as testing performance. The MSE is low with 59443. XGBoost performs by far the best out of the tried model types."
    ]
   }
  ],
