--- a/Scripts/Model/tagPrediction/ClassifierChain_tagPrediction.ipynb
+++ b/Scripts/Model/tagPrediction/ClassifierChain_tagPrediction.ipynb
@@ -988,7 +988,7 @@
    "metadata": {},
    "source": [
     "## Train-Test-Split\n",
-    "The data is split into training and testing set in a 70:30 ratio. To ensure the order of the data is used properly, with the training data chronologically being set before the testing set."
+    "To ensure the order of the data is used properly, with the training data chronologically being set before the testing set."
    ]
   },
   {
