Added missing R^2 metric
For the last GAM model, the R^2 metric wasn't calculated. This has been fixed.

--- a/Scripts/Model/amountCodeSmells/GAM_amountCodeSmells.ipynb
+++ b/Scripts/Model/amountCodeSmells/GAM_amountCodeSmells.ipynb
@@ -435,7 +435,7 @@
     "label = \"CODE_SMELLS\"\n",
     "\n",
     "current_dir = os.getcwd()\n",
-    "model_save_dir = os.path.join(current_dir, '..', '..', 'Data', 'Models', 'CodeSmells')\n",
+    "model_save_dir = os.path.join(current_dir, '..', '..', '..', 'Data', 'Models', 'CodeSmells')\n",
     "\n",
     "df = dataloader.load_df(current_dir)\n",
     "df = dataloader.put_label_in_front(df, label)\n",
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "f5f65c06-e206-4007-afdb-62073afad36a",
    "metadata": {},
    "outputs": [
@@ -558,7 +558,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\carol\\AppData\\Local\\Temp\\ipykernel_13752\\1160389531.py:6: UserWarning: KNOWN BUG: p-values computed in this summary are likely much smaller than they should be. \n",
+      "C:\\Users\\carol\\AppData\\Local\\Temp\\ipykernel_9028\\3975935816.py:6: UserWarning: KNOWN BUG: p-values computed in this summary are likely much smaller than they should be. \n",
       " \n",
       "Please do not make inferences based on these values! \n",
       "\n",
@@ -572,6 +572,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "R-squared on the test set: 0.9986916136264455\n",
       "Mean Squared Error on the test set: 159845.036812013\n",
       "Mean Average Error on the test set: 256.9336432880163\n"
      ]
@@ -579,10 +580,10 @@
     {
      "data": {
       "text/plain": [
-       "['C:\\\\Users\\\\carol\\\\Dropbox\\\\DataScience\\\\Semester4\\\\MasterProjectSonarQube\\\\Scripts\\\\Model\\\\..\\\\..\\\\Data\\\\Models\\\\CodeSmells\\\\GAM\\\\GAM_spine.joblib']"
+       "['C:\\\\Users\\\\carol\\\\Dropbox\\\\DataScience\\\\Semester4\\\\MasterProjectSonarQube\\\\Scripts\\\\Model\\\\amountCodeSmells\\\\..\\\\..\\\\..\\\\Data\\\\Models\\\\CodeSmells\\\\GAM\\\\GAM_spine.joblib']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -599,6 +600,8 @@
     "y_pred = gam.predict(X_test)\n",
     "\n",
     "# evaluating  model performance\n",
+    "r2 = r2_score(y_test, y_pred)\n",
+    "print(f\"R-squared on the test set: {r2}\")\n",
     "mse = mean_squared_error(y_test, y_pred)\n",
     "print(f\"Mean Squared Error on the test set: {mse}\")\n",
     "mae = mean_absolute_error(y_test, y_pred)\n",
@@ -617,7 +620,7 @@
    "metadata": {},
    "source": [
     "### Result\n",
-    "GAM with cubic splines performs significantly better on the testing set than the best linear regression model (MAE of 1249.61)."
+    "GAM with cubic splines performs significantly better on the testing set than the best linear regression model (MAE of 256.93)."
    ]
   },
   {
@@ -631,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "432a2250-7d72-4182-9125-9c1f8c39319b",
    "metadata": {},
    "outputs": [
@@ -669,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "5559ae60-056e-4774-baab-1d587257fdc1",
    "metadata": {},
    "outputs": [
@@ -725,7 +728,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\carol\\AppData\\Local\\Temp\\ipykernel_13752\\887752471.py:6: UserWarning: KNOWN BUG: p-values computed in this summary are likely much smaller than they should be. \n",
+      "C:\\Users\\carol\\AppData\\Local\\Temp\\ipykernel_9028\\4100050081.py:6: UserWarning: KNOWN BUG: p-values computed in this summary are likely much smaller than they should be. \n",
       " \n",
       "Please do not make inferences based on these values! \n",
       "\n",
@@ -739,6 +742,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "R-squared on the test set: 0.9973203208903333\n",
       "Mean Squared Error on the test set: 327375.3186265709\n",
       "Mean Average Error on the test set: 385.51548570373944\n"
      ]
@@ -746,10 +750,10 @@
     {
      "data": {
       "text/plain": [
-       "['C:\\\\Users\\\\carol\\\\Dropbox\\\\DataScience\\\\Semester4\\\\MasterProjectSonarQube\\\\Scripts\\\\Model\\\\..\\\\..\\\\Data\\\\Models\\\\CodeSmells\\\\GAM\\\\GAM_mixLinearSpine.joblib']"
+       "['C:\\\\Users\\\\carol\\\\Dropbox\\\\DataScience\\\\Semester4\\\\MasterProjectSonarQube\\\\Scripts\\\\Model\\\\amountCodeSmells\\\\..\\\\..\\\\..\\\\Data\\\\Models\\\\CodeSmells\\\\GAM\\\\GAM_mixLinearSpine.joblib']"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -766,6 +770,8 @@
     "y_pred = gam2.predict(X_test)\n",
     "\n",
     "# evaluating  model performance\n",
+    "r2 = r2_score(y_test, y_pred)\n",
+    "print(f\"R-squared on the test set: {r2}\")\n",
     "mse = mean_squared_error(y_test, y_pred)\n",
     "print(f\"Mean Squared Error on the test set: {mse}\")\n",
     "mae = mean_absolute_error(y_test, y_pred)\n",
